--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,11 @@ jobs:
       matrix:
         include:
           - target: x86_64-pc-windows-gnu
+            archive: zip
           - target: x86_64-unknown-linux-musl
+            archive: tar.gz
           - target: x86_64-apple-darwin
+            archive: zip
     steps:
       - uses: actions/checkout@v2
       - name: Compile and Release
